[project]
name = "asrdiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "pytest>=9.0.1",
    "torch>=2.9.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
