[project]
name = "asrdiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "causal-conv1d>=1.5.3.post1",
    "datasets>=4.4.1",
    "mamba-ssm>=2.2.6.post3",
    "matplotlib>=3.10.7",
    "pytest>=9.0.1",
    "scikit-learn>=1.7.2",
    "tokenizers>=0.22.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchcodec>=0.8.1",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
